# VolumeScroller

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  hugeiconsVolume.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  main.rs  taskbar_wheel.rs
