[package]
name = "volume-scroller"
version = "0.1.1"
description = "Scroll on the Windows taskbar to adjust system volume."
authors = ["Duffy"]
edition = "2021"

[lib]
name = "volume_scroller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
winreg = "0.55"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_UI_WindowsAndMessaging"
] }
